--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./config.js"></script>
-    <title>fooof</title>
+    <title>FoooF-look china</title>
   </head>
   <body>
     <div id="app"></div>
