--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4904555_oqjrlf4xgts.css" />
     <script src="./config.js"></script>
     <title>FoooF-look china</title>
   </head>
